# imx_usb_loader

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  imx_loader_config.c  imx_sdp.c  imx_sdp.h  imx_uart.c  imx_usb.c  imx_usb_lib.h  osal.c  osal.h  portable.h  wix_extras.wxs  wix_patch.xml
cmake/: FindGetOpt.cmake  FindLibUsb10.cmake  MiscHelpers.cmake
examples/usb-app-external/: CMakeLists.txt  main.c
examples/usb-app-external/cmake/: FindLibImxCommon.cmake  FindLibImxUsbCore.cmake  FindLibUsb10.cmake
msvc/: getopt.c
tests/: runtest.bat  runtest.sh  test-dcd.imx.output  test-plugin.imx.output  test.imx.output
